# LLaVA-NeXT

./: pyproject.toml  run.py
.run/: model_test.run.xml
data/: activitynet.py  internvid.py  tmp.py  utils.py  video.py
docs/: LLaVA-NeXT.md
llava/: __init__.py  conversation.py  mm_utils.py
llava/data/: __init__.py  activitynet.py  llavavideo.py  utils.py  video.py
llava/eval/: log_utils.py
llava/model/: __init__.py  builder.py  try2.py
llava/model/language_model/: llava_llama.py  llava_voco_llama.py
llava/model/multimodal_encoder/: builder.py  clip_encoder.py
llava/model_voco/: __init__.py  llava_arch.py  try1.py
llava/model_voco/language_model/: llava_voco_llama.py
llava/model_voco/language_model/attn_utils/: modeling_attn_mask_utils.py
llava/model_voco/mamba/: mamba_compress.py
llava/model_voco/ssm/: mamba2.py  tokenizer.py
llava/train/: llava_trainer.py  train.py  train_mamba.py  train_mamba_vcomp.py  train_voco.py  train_voco_video.py
llavavid/train/: train.py  train_voco.py
playground/demo/: video_demo.py
scripts/: accelerate.yaml  zero3.json
scripts/v1_6/train/7b/: finetune_voco.sh
scripts/video/train/7b/: anet_caption.sh  internvid_finetune.sh
tests/: cookies.txt  eval_voco.py  generate_test.py  model_test.py  model_test.yaml  voco_forward.py  voco_gen_test.py
train_configs/: accelerate.yaml  test.yaml  train_voco_7b_anet_caption.yaml  train_voco_7b_anet_inst.yaml  train_voco_7b_anet_inst_debug.yaml  train_voco_7b_llava.yaml
trl/trainer/: __init__.py  dpo_trainer.py  ppo_trainer.py
