[tool.black]
line-length = 240

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llava"
version = "1.7.0.dev0"
description = "Towards GPT-4 like large language and visual assistant."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[project.optional-dependencies]
standalone = [
    "shortuuid",
    "httpx",
    "einops",
    "ftfy",
    "yt-dlp[default]",
    "av",
    "opencv-python",
]

train = [
    "llava[standalone]",
    "open_clip_torch",
    "fastapi",
    "gradio",
    "markdown2[all]",
    "numpy",
    "requests",
    "sentencepiece",
    "torch",
    "torchvision",
    "uvicorn",
    "wandb",
    "deepspeed",
    "peft",
    "accelerate>=0.29.1",
    "tokenizers",
    "transformers",
    "bitsandbytes",
    "scikit-learn",
    "sentencepiece",
    "einops",
    "einops-exts",
    "gradio_client",
    "pydantic",
    "timm",
    "hf_transfer",
    "decord",
    "datasets",
    "tyro",
    "scipy",
    "rouge",
    "urllib3"
]

[project.urls]
"Homepage" = "https://llava-vl.github.io"
"Bug Tracker" = "https://github.com/haotian-liu/LLaVA/issues"

[tool.setuptools.packages.find]
exclude = [
    "assets*",
    "benchmark*",
    "docs",
    "dist*",
    "playground*",
    "scripts*",
    "tests*",
    "checkpoints*",
    "project_checkpoints*",
    "debug_checkpoints*",
    "mlx_configs*",
    "wandb*",
    "notebooks*",
]

[tool.wheel]
exclude = [
    "assets*",
    "benchmark*",
    "docs",
    "dist*",
    "playground*",
    "scripts*",
    "tests*",
    "checkpoints*",
    "project_checkpoints*",
    "debug_checkpoints*",
    "mlx_configs*",
    "wandb*",
    "notebooks*",
]
